# stackload_DeMo

./: .gitignore  HACKATHON_WORKSPACE_PLAN.md  README.md  WORKSPACE_PLAN.md  architecture_prompt.md  package-lock.json  project_specification.md
ai/: CLAUDE.md  docker-compose.yaml  dummy_resume.txt  livekit-interview.yaml  livekit-workspace.yaml  livekit.yaml  pyproject.toml  requirements.txt
ai/chroma_db/: chroma.sqlite3
ai/config_templates/: conf.default.yaml
ai/scripts/: seed_vector_store.py
ai/src/: agent.py  agent_multimodal.py
ai/tests/: client_simulator.py  test_interview_manager.py  test_phase_update.py  test_protocol_unit.py
crawler/: README.md  cli_jd.py  main.py  pyproject.toml  requirements.txt
crawler/src/: cli_jd.py  main.py
crawler/src/apps/dev_event/: fetcher.py  models.py  parser.py  service.py
crawler/src/apps/tech_blog/: crawler.py
crawler/src/core/: database.py
crawler/src/domains/job/: crawler.py
crawler/src/domains/tech_blog/: crawler.py
crawler/src/infra/: tagger.py
crawler/src/shared/: config.py  tagger.py
web/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_PUSH_NOTIFICATION.md  build_log.txt  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  requirements_specification.md  tailwind.config.ts  vercel.json
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/docs/: PUSH_NOTIFICATION_SETUP.md
web/hooks/: use-auth.ts  use-blog-data.ts  use-infinite-blog-data.ts  use-interview-session.ts  (+3 more)
workspace-server/: HANDOVER.md  package-lock.json  package.json
(+156 files in other folders)
